# dawnland-launcher

./: .env.development  .gitignore  AGENTS.md  AGENTS_ZH.md  README.md  find_chinese.cjs  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  sonar-project.properties  tailwind.config.js  update_locales.cjs  update_locales2.cjs  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/scripts/: upload_to_r2.js
.github/workflows/: code-scan.yml  e2e-chatops.yml  pr-agent.yml  pr.yml  release.yml  test.yml
docs/: ARCHITECTURE.md
e2e/: 01-account.spec.ts  02-updater.spec.ts  03-fabric-workflow.spec.ts  04-resources-and-presets.spec.ts  accounts.spec.ts  fixtures.ts  home.spec.ts  instances.spec.ts  navigation.spec.ts  servers.spec.ts  settings.spec.ts  test.spec.ts
src/: App.vue  api.spec.ts  i18n.ts  main.ts  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/auth/: authlib.rs  microsoft.rs  mod.rs
src-tauri/src/commands/: mod.rs  modpack.rs  task.rs
src-tauri/src/core/: cache.rs  curseforge.rs  fabric.rs  forge.rs  fs_utils.rs  java.rs  launcher.rs  manager.rs  mod.rs  mod_parser.rs  modpack.rs  modrinth.rs  mojang.rs  ping.rs  security.rs  server.rs  settings.rs  utils.rs
src-tauri/src/core/task/: db.rs  manager.rs  mod.rs  state.rs
src-tauri/src/downloader/: download.rs  mod.rs
src-tauri/src/logger/: mod.rs
src-tauri/src/models/: mod.rs  server.rs
src-tauri/tests/: api_mock_test.rs
src/components/: CrashReportModal.vue  CustomTitleBar.vue  DeepLinkReceiveModal.vue  InstallCard.vue  InstallInstanceModal.vue  InstanceModsModal.vue  LocalDatapacksModal.vue  LocalModsModal.vue  NotificationCenter.vue  PrivacyPolicyModal.vue  ServerDetailsModal.vue  Sidebar.vue  TaskCenter.vue  TaskDetailModal.vue  TaskDetailView.vue  TaskItem.vue  Toaster.vue  UpdaterModal.vue
src/components/downloads/: AddToPresetDialog.vue  DatapackInstallTab.vue  InstanceInstallTab.vue  ModpackInstallTab.vue  ModsInstallTab.vue  ResourcepackInstallTab.vue  ShaderpackInstallTab.vue  WorldInstallTab.vue
src/components/instances/: InstanceCustomResourcepacksTab.vue  InstanceCustomShadersTab.vue  InstanceDatapacksTab.vue  InstanceModGroupTab.vue  InstanceModsTab.vue  InstanceResourcepacksTab.vue  InstanceSettingsTab.vue  InstanceShadersTab.vue  InstanceWorldsTab.vue  PresetEditorDialog.vue  PresetResolveDialog.vue
src/components/ui/: DButton.spec.ts  DButton.vue  DInput.spec.ts  DInput.vue  DMultiSelect.spec.ts  DMultiSelect.vue  DSelect.spec.ts  DSelect.vue  DSidebarTabs.spec.ts  DSidebarTabs.vue  DToggleGroup.spec.ts  DToggleGroup.vue
src/components/ui/alert-dialog/: AlertDialog.vue  AlertDialogTitle.vue  index.ts
src/components/ui/dialog/: DialogContent.vue  DialogDescription.vue  DialogTitle.vue  index.ts
src/components/ui/dropdown-menu/: DropdownMenu.vue  DropdownMenuItem.vue  shared.ts
src/composables/: useAppStatus.ts  useInstances.spec.ts  useInstances.ts  useLaunchState.ts  useNotificationStore.spec.ts  useNotificationStore.ts  useTaskStatusReload.ts  useTaskStore.spec.ts  useTaskStore.ts  useToast.ts  useUpdate.ts
src/directives/: safeHtml.ts
src/layouts/: MainLayout.vue
src/locales/: en.json  zh-CN.json
src/router/: index.ts
src/types/: account.ts  index.ts  server.ts  task.ts
src/utils/: analytics.ts  api.spec.ts  api.ts  constants.ts  deepLink.spec.ts  deepLink.ts  error.spec.ts  error.ts  updateChannel.ts
src/views/: AccountsView.vue  DownloadsView.vue  HomeView.vue  InstanceManagementView.vue  InstancesView.vue  ModpackInstallView.vue  ModsView.vue  ServersView.vue  SettingsView.vue  UITestView.vue
tests/: formatPhase.spec.ts
web-backend/: go.mod  go.sum  main.go
web-backend/database/: db.go
web-backend/handlers/: microsoft.go  proxy.go  server.go  updater.go
web-backend/models/: server.go
web-backend/tasks/: ping.go
