[package]
name = "DLML"
version = "0.0.1"
description = "A modern, cross-platform Minecraft launcher"
authors = ["Dawnland"]
edition = "2021"
default-run = "DLML"

[[bin]]
name = "DLML"
path = "src/main.rs"

[lib]
name = "dawnland_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-aptabase = "1.0.0"
tauri-plugin-deep-link = "2.0.0"
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-xml-rs = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
dirs = "6"
reqwest = { version = "0.12", features = ["stream", "json", "multipart"] }
futures-util = "0.3"
futures = "0.3"
tokio = { version = "1", features = ["fs", "io-util", "sync", "time", "process", "macros", "rt", "rt-multi-thread"] }
uuid = { version = "1", features = ["v3", "v4", "serde"] }
zip = "2"
walkdir = "2"
which = "7"
sysinfo = "0.32"
open = "5"
urlencoding = "2"
sha1 = "0.10"
craftping = { version = "0.7.0", features = ["async-tokio"] }
tauri-plugin-process = "2.3.1"
sha2 = "0.11.0"
base64 = "0.22.1"
hmac = "0.13.0"
hex = "0.4.3"
self-replace = "1.5.0"
tempfile = "3.27.0"
sys-locale = "0.3"
tokio-rusqlite = "0.7.0"
async-trait = "0.1.89"
tokio-util = "0.7.18"
chrono = "0.4.45"
thiserror = "2.0.18"
rusqlite = { version = "0.37.0", features = ["bundled"] }
fastnbt = "2.6.1"
async-recursion = "1.1"
toml = "0.8"
md5 = "0.8.0"

[dev-dependencies]
mockito = "1.7.2"

[target.x86_64-pc-windows-msvc.dependencies]
winreg = "0.56.0"
webview2-com = "0.38.2"
windows-core = "0.61.2"
